fix translate
